--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "bot-deployment-backend",
+  "name": "custom-render-backend",
   "version": "1.0.0",
-  "description": "Backend to deploy WhatsApp bots using repo links and session IDs",
+  "description": "A custom VPS-like backend for deploying bots, similar to Render.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
+    "express": "^4.18.2"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
