--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "custom-render-backend",
+  "name": "whatsapp-bot-deployment",
   "version": "1.0.0",
-  "description": "A custom VPS-like backend for deploying bots, similar to Render.",
+  "description": "Backend for deploying WhatsApp bots",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "author": "EMMY HENZ",
-  "license": "ISC"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  }
 }
