--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "whatsapp-bot-deployment",
+  "name": "backend-for-bot-deployment",
   "version": "1.0.0",
-  "description": "Backend for deploying WhatsApp bots",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2"
   }
 }
